@@ -27,19 +27,16 @@
  */
 package org.hisp.dhis.program.notification.template.snapshot;
 
-import static java.util.Collections.singleton;
-
-import com.google.common.collect.ImmutableList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import org.hisp.dhis.common.BaseIdentifiableObject;
 import org.hisp.dhis.dataelement.DataElement;
-import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.program.notification.ProgramNotificationTemplate;
 import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
 import org.hisp.dhis.user.User;
@@ -54,7 +51,7 @@ public class NotificationTemplateMapper {
     return toBaseIdentifiableObject(
         templateSnapshot,
         ProgramNotificationTemplate::new,
-        ImmutableList.of(
+        List.of(
             t -> t.setMessageTemplate(templateSnapshot.getMessageTemplate()),
             t -> t.setNotificationRecipient(templateSnapshot.getNotificationRecipient()),
             t ->
@@ -85,7 +82,7 @@ public class NotificationTemplateMapper {
     return toIdentifiableObjectSnapshot(
         template,
         ProgramNotificationTemplateSnapshot::new,
-        ImmutableList.of(
+        List.of(
             t -> t.setMessageTemplate(template.getMessageTemplate()),
             t -> t.setNotificationRecipient(template.getNotificationRecipient()),
             t ->
@@ -115,14 +112,14 @@ public class NotificationTemplateMapper {
     return toBaseIdentifiableObject(
         userGroupSnapshot,
         UserGroup::new,
-        ImmutableList.of(ug -> ug.setMembers(toUsers(userGroupSnapshot.getMembers()))));
+        List.of(ug -> ug.setMembers(toUsers(userGroupSnapshot.getMembers()))));
   }
 
   private UserGroupSnapshot toUserGroupSnapshot(UserGroup userGroup) {
     return toIdentifiableObjectSnapshot(
         userGroup,
         UserGroupSnapshot::new,
-        ImmutableList.of(ug -> ug.setMembers(toUserSnapshot(userGroup.getMembers(), 0))));
+        List.of(ug -> ug.setMembers(toUserSnapshot(userGroup.getMembers()))));
   }
 
   private Set<User> toUsers(Set<UserSnapshot> userSnapshots) {
@@ -133,19 +130,16 @@ public class NotificationTemplateMapper {
           toBaseIdentifiableObject(
               userSnapshot,
               User::new,
-              ImmutableList.of(
+              List.of(
                   u -> u.setName(userSnapshot.getName()),
                   u -> u.setUsername(userSnapshot.getUsername()),
                   u -> u.setEmail(userSnapshot.getEmail()),
-                  u -> u.setPhoneNumber(userSnapshot.getPhoneNumber()),
-                  u ->
-                      u.setOrganisationUnits(
-                          singleton(toOrganisationUnit(userSnapshot.getOrganisationUnit()))))));
+                  u -> u.setPhoneNumber(userSnapshot.getPhoneNumber()))));
     }
     return users;
   }
 
-  private Set<UserSnapshot> toUserSnapshot(Set<User> users, int ouLevel) {
+  private Set<UserSnapshot> toUserSnapshot(Set<User> users) {
     Set<UserSnapshot> userSnapshots = new HashSet<>();
 
     for (User user : users) {
@@ -153,52 +147,13 @@ public class NotificationTemplateMapper {
           toIdentifiableObjectSnapshot(
               user,
               UserSnapshot::new,
-              ImmutableList.of(
+              List.of(
                   u -> u.setName(user.getName()),
                   u -> u.setUsername(user.getUsername()),
                   u -> u.setEmail(user.getEmail()),
-                  u -> u.setPhoneNumber(user.getPhoneNumber()),
-                  u ->
-                      u.setOrganisationUnit(
-                          toOrganisationUnitSnapshot(user.getOrganisationUnit(), ouLevel)))));
+                  u -> u.setPhoneNumber(user.getPhoneNumber()))));
     }
     return userSnapshots;
-  }
-
-  private OrganisationUnit toOrganisationUnit(OrganisationUnitSnapshot organisationUnitSnapshot) {
-    return toBaseIdentifiableObject(
-        organisationUnitSnapshot,
-        OrganisationUnit::new,
-        ImmutableList.of(
-            ou -> ou.setName(organisationUnitSnapshot.getName()),
-            ou -> ou.setDescription(organisationUnitSnapshot.getDescription()),
-            ou -> ou.setShortName(organisationUnitSnapshot.getShortName()),
-            ou ->
-                ou.setParent(
-                    organisationUnitSnapshot.getParent() != null
-                        ? toOrganisationUnit(organisationUnitSnapshot.getParent())
-                        : null),
-            ou -> ou.setUsers(toUsers(organisationUnitSnapshot.getUsers()))));
-  }
-
-  private OrganisationUnitSnapshot toOrganisationUnitSnapshot(
-      OrganisationUnit organisationUnit, int level) {
-    if (level < 2) {
-      return toIdentifiableObjectSnapshot(
-          organisationUnit,
-          OrganisationUnitSnapshot::new,
-          ImmutableList.of(
-              ou -> ou.setName(organisationUnit.getName()),
-              ou -> ou.setDescription(organisationUnit.getDescription()),
-              ou -> ou.setShortName(organisationUnit.getShortName()),
-              ou ->
-                  ou.setParent(
-                      organisationUnit.getParent() != null
-                          ? toOrganisationUnitSnapshot(organisationUnit.getParent(), level + 1)
-                          : null),
-              ou -> ou.setUsers(toUserSnapshot(organisationUnit.getUsers(), level + 1))));
-    }
-    return null;
   }
 
   private <T extends IdentifiableObjectSnapshot> T toIdentifiableObjectSnapshot(
